# Grid-Physics

./: CMakeLists.txt  LICENSE  README.md
src/: grid_physics.cpp
src/grid/: Grid.cpp  Grid.h  GridPoint.cpp  GridPoint.h  SandPiles.cpp  SandPiles.h
src/utils/: Color.h  Constants.h
src/window/: Window.h
